# languages_tools

./: .gitignore  README.md
c/linked_list/: build.sh  build_and_run.sh  main.c  notes.md  run.sh
c/pointers_in_c/: README.md  build.sh  main.c  notes.md
cpp/boost_beast_http/: CMakeLists.txt
cpp/boost_beast_http/dev/: build.sh  watch.sh
cpp/cmake-3.29.3-tutorial-source/: README.txt
cpp/cmake-3.29.3-tutorial-source/Step1/: CMakeLists.txt  tutorial.cxx
cpp/cmake-3.29.3-tutorial-source/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
cpp/hello_world/: a.out  hello.cpp
cpp/my_http/: CMakeLists.txt  README.md  compile_commands.json
cpp/my_http/src/: http_tcpServer.cpp  http_tcpServer.h  server.cpp
electron/electron-app/: package-lock.json
electron/electron-app/src/renderer/src/: App.tsx
electron/tutorial/: index.html  main.js  package-lock.json  package.json  renderer.js
rust/hello_web_server/: 404.html  hello.html
rust/hello_web_server/src/: lib.rs  main.rs
rust/minigrep/src/: lib.rs
rust/my-redis/examples/: get-hello.rs
rust/race_game/: Cargo.toml
rust/race_game/src/: main.rs
rust/tonic_shared_state_stream/: Cargo.toml
rust/tonic_shared_state_stream/proto/: stream.proto
rust/tonic_shared_state_stream/src/: client.rs  server.rs
tauri/tauri-doodles/: Cargo.toml
tauri/tauri-doodles/src-tauri/: Cargo.toml  tauri.conf.json
tauri/tauri-doodles/src-tauri/src/: main.rs
